Filter out purchased blends from excess list.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -68,6 +68,7 @@
         <li><a class="dropdown-item" href="/core/display-item-locations?item-type=blend">Blend Item Locations</a></li>
         <li><a class="dropdown-item" href="/core/display-all-GHS-pictograms">Edit GHS Pictograms</a></li>
         <li><a class="dropdown-item" href="/core/attendance-report">Attendance Records</a></li>
+        <li><a class="dropdown-item" href="/core/excess-blends">Excess Blends</a></li>
     </ul>
 </li>
 <li class="nav-item">
