--- a/app/core/templates/core/reports/excessblends.html
+++ b/app/core/templates/core/reports/excessblends.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="col-md-6">
-        <h5>Total Excess Value: ${{ total_excess_inventory_value }}</h5>
+        <h5>Total Excess Value: ${{ total_excess_inventory_value|floatformat:2 }}</h5>
     </div>
     <div class="row mt-3">
         <div class="col-12">
