--- a/app/core/templates/core/LETshortageRows/blackTintPasteShortage.html
+++ b/app/core/templates/core/LETshortageRows/blackTintPasteShortage.html
@@ -1,24 +1,26 @@
 {% load static %}
 <tr class="filterableRow blendStillNeeded" needsCount="needsCount">
-    {% if user.is_staff %}<td class='text-center'>
+    {% if user.is_staff %}
+    <td data-label="Select" class="text-center">
         <input type="checkbox" class="checkbox" itemcode={{ item.component_item_code }} name={{ item.component_item_code }}></input>
-    </td>{% endif %}
-    <td>841BLK.B</td>
-    <td>BLEND-Tint Paste for black let</td>
-    <td>1.5</td>
-    <td class ="text-center"></td>
-    <td>LET</td>
-    <td>395</td>
-    <td></td>
-    <td>?????</td>
-    <td>
-        <td class="text-center lotNumCell">
-            <button class="btn btn-secondary lotNumButton" 
-                data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
-                data-itemcode="841BLK.B" data-desc="BLEND-Tint Paste for black let" 
-                data-totalqty="395" data-line="Prod" data-desk="Desk_1">
-                +
-            </button>
-        </td>
     </td>
+    {% endif %}
+    <td data-label="Blend">841BLK.B</td>
+    <td data-label="Description">BLEND-Tint Paste for black let</td>
+    <td data-label="First Shortage">1.5</td>
+    <td data-label="Line" class="text-center"></td>
+    <td data-label="1wk Short">LET</td>
+    <td data-label="Total Short">395</td>
+    <td data-label="Schedule Status"></td>
+    <td data-label="When Short AFTER BLENDS">?????</td>
+    {% if user.is_staff %}
+    <td data-label="Lot Number" class="text-center lotNumCell">
+        <button class="btn btn-secondary lotNumButton" 
+            data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
+            data-itemcode="841BLK.B" data-desc="BLEND-Tint Paste for black let" 
+            data-totalqty="395" data-line="Prod" data-desk="Desk_1">
+            +
+        </button>
+    </td>
+    {% endif %}
 </tr>
