update title of loop service status

--- a/app/core/templates/core/loopstatus.html
+++ b/app/core/templates/core/loopstatus.html
@@ -13,7 +13,7 @@
         <!-- Service Control Card -->
         <div class="card mb-4 shadow-sm">
             <div class="card-body d-flex align-items-center">
-                <span class="font-weight-bold mr-3">Restart Service:</span>
+                <span class="font-weight-bold mr-3">Data Loop Local Service Status:</span>
                 <span id="serviceStatusIndicator"
                       class="badge badge-secondary badge-pill px-2 py-1 mx-3">
                     <i class="fas fa-sync fa-spin mr-1"></i>
