--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -9,7 +9,7 @@
         <h1 id="countListNameHeader">{{ count_list_name }}</h1>
         <div class="noPrint returnlink"><a class="returnlink" href="/core/display-count-collection-links/">&#60;&#60; Return to Count Links Page</a></div>
     </div>
-    <dialog id="blendLabelDialog">
+    <dialog id="partialContainerLabelDialog">
         {% include 'core/modals/countlist-container-label.html' %}
     </dialog>
     
@@ -124,6 +124,7 @@
     <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
 
     {% include 'core/modals/add-countlistitem-modal.html' %}
+
     <div id="connectionStatusIndicator" class="connected">
         <span>&#10003;</span> Connected
     </div>
